--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ol": "^6.6.1",
     "qs": "^6.10.1",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
